# simlcd

./: .gitmodules  CMakeLists.txt  Main.cpp  README.md  main.cpp  mmain.cpp
.github/workflows/: cmake-single-platform.yml
simlcd/: CMakeLists.txt  simlcd.cpp  simlcd.h
